# sports-betting-ai

./: .gitattributes  .gitignore  README.md  docker-compose.watch.yml  docker-compose.yml  package-lock.json  package.json  start.sh
AI/: README.md  improve_model.py  requirements.txt  train_model.ipynb  train_model.py  v2.ipynb
API/: .dockerignore  Cargo.toml  Dockerfile  README.md  diesel.toml  worker.js
API/migrations/2022-11-24-041606_create_game/: down.sql  up.sql
API/migrations/2022-11-26-165134_create_saved_game/: down.sql  up.sql
API/migrations/2022-11-29-013612_game_injuries/: down.sql  up.sql
API/migrations/2022-12-11-183517_update_saved_games_to_include_model/: down.sql  up.sql
API/src/: main.rs
API/src/data/: 2022-11-10.csv  2022-11-11.csv  2022-11-13.csv  2022-11-23.csv  2022-11-24.csv  2022-11-26.csv  2022-11-30.csv  2022-12-01.csv  2022-12-02.csv  2022-12-07.csv  2022-12-09.csv  2022-12-10.csv  2022-12-12.csv
API/src/model/: keras_metadata.pb  saved_model.pb
API/src/model/overfit/variables/: variables.index
API/src/model/v1/variables/: variables.index
API/src/model/variables/: variables.index
API/src/models/: api_error.rs  daily_games.rs  game.rs  game_odds.rs  game_with_odds.rs  mod.rs  prediction.rs  schema.rs  season_games.rs  team_stats.rs  utils.rs
API/src/routes/: game.rs  mod.rs  nn.rs  nn_mock.rs  prediction.rs  util.rs
API/src/services/: history_service.rs  missed_games_service.rs  mod.rs
API/src/trained_models/bad/allhome/: saved_model.pb
API/src/trained_models/bad/overfit/: saved_model.pb
API/src/trained_models/ou/variables/: variables.index
API/src/trained_models/useable/ou/: keras_metadata.pb  saved_model.pb
API/src/trained_models/useable/v2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
API/src/trained_models/useable/v2/variables/: variables.data-00000-of-00001  variables.index
API/src/util/: io_helper.rs  mod.rs  nn_helper.rs  polars_helper.rs  string.rs
Website/: .prettierrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
api/: .gitignore  Dockerfile  Dockerfile-services  Dockerfile.dev  pyproject.toml
api/api/: __init__.py  constants.py  main.py
api/api/business/: cache.py  daily_games.py  database.py  factory.py  injury.py  model.py  odds.py  service.py
api/api/config/: application.py  cache.py  database.py
api/api/model/: model.py
api/api/model/games/: daily_game.py  injury.py
api/api/model/model/: accuracy.py  date_model.py  model.py  saved_game.py
api/api/resources/data/: 2022-11-25.csv  2022-12-04.csv  2022-12-05.csv  2022-12-11.csv  2022-12-16.csv  2023-10-20.csv  2023-12-28.csv
api/api/resources/env/: development.example.env
api/api/resources/trained_models/v2/: saved_model.pb
api/api/routes/: games.py  model.py  ping.py
api/api/service/: history.py  service.py
api/api/services/history/: history.py
api/api/utils/: daily_game.py
api/resources/config/: application.py  cache.py  database.py
api/resources/data/: 2022-11-15.csv  2022-11-16.csv  2022-11-20.csv  2022-11-27.csv  2022-11-28.csv  2022-11-29.csv  2022-12-08.csv  2022-12-13.csv  2023-12-30.csv
api/resources/trained_models/v2/: fingerprint.pb  keras_metadata.pb
api/resources/trained_models/v2/variables/: variables.index
api/services/: main.py
api/services/history/: history.py  saver.py
api/services/missed_games/: missed_games.py
ml/: v2.py  (+3 more)
services/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/services/: main.py
services/services/business/: manager.py  service.py
services/services/history/: history.py  saver.py
(+121 files in other folders)
