[package]
name = "sports-betting-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tensorflow = "0.19.1"
serde = { version = "1.0.147", features = ["derive"] }


env_logger = "0.9.3"