[package]
name = "sports-betting-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version= "4.2.1" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_derive = "1.0.147"
reqwest = "0.11.12"
env_logger = "0.9.3"
csv = "1.1.6"
polars = "0.25.1"
tensorflow = "0.16.0"
protobuf = "3.2.0"
log = "0.4.17"
structopt = "0.3.23"

[dev-dependencies]
# I dont know if the deployed version will have a gpu or not, so I'm going to assume it doesn't
#tensorflow = { version = "0.19.1", features = ["tensorflow_gpu"] }


